--- a/style.css
+++ b/style.css
@@ -924,11 +924,11 @@ header {
 }
 /*三本バーアイコン*/
 #menubar_hdr.close {
-	background: #fff url(../images/icon_menu.png) no-repeat center top/50px;	/*背景色、背景画像の読み込み、画像の上半分（３本マーク）を表示。幅は50px。*/
+	background: #fff url(./images/icon_menu.png) no-repeat center top/50px;	/*背景色、背景画像の読み込み、画像の上半分（３本マーク）を表示。幅は50px。*/
 }
 /*閉じるアイコン*/
 #menubar_hdr.open {
-	background: #fff url(../images/icon_menu.png) no-repeat center bottom/50px;	/*背景色、背景画像の読み込み、画像の下半分（×マーク）を表示。幅は50px。*/
+	background: #fff url(./images/icon_menu.png) no-repeat center bottom/50px;	/*背景色、背景画像の読み込み、画像の下半分（×マーク）を表示。幅は50px。*/
 }
 
 /*fixmenu設定（メニューが画面上部に到達した際のスタイル）
@@ -1006,7 +1006,7 @@ header h1 img {
 mainimg_sは古い端末用で準備した小さい画像ですが、小さな端末では大きな画像を使う必要がないので小さい方を適用しました。
 ---------------------------------------------------------------------------*/
 #mainimg {
-	background: url(../images/mainimg_s.jpg) no-repeat center center / cover;
+	background: url(./images/header_ukiyoe.jpg) no-repeat center center / cover;
 }
 
 /*トップページのSVGロゴアニメーション設定
